--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,6 +13,7 @@
     "UPDATE_PAYMENT": "Update payment",
     "CREATE_PAYMENT": "Create new payment",
     "CLOSE": "Close",
-    "MARK_AS_PAID": "Mark as paid"
+    "MARK_AS_PAID": "Mark as paid",
+    "CONFIRM_DELETE": "Confirm deletion"
 
   }
