Reuse modal for actions
Modal component is used for CREATE, DELETE and MARK_AS_PAID

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,6 +14,7 @@
     "CREATE_PAYMENT": "Create new payment",
     "CLOSE": "Close",
     "MARK_AS_PAID": "Mark as paid",
-    "CONFIRM_DELETE": "Confirm deletion"
+    "CONFIRM_DELETE": "Confirm deletion",
+    "ACTIONS": "Actions"
 
   }
